tests/snapshots/builders__debug_struct__multiple.snap
---
source: tests/builders.rs
expression: pprint(Foo)

---
Foo {
    bar: true,
    baz: "10/20",
}
