tests/snapshots/builders__debug_struct__nested.snap
---
source: tests/builders.rs
expression: pprint(Bar)

---
Bar {
    foo: Foo {
        bar: true,
        baz: "10/20",
    },
    hello: "world",
}
